--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
     <section class="strip-1">
       <div class="strip-1-inner">
         <div class="strip-1-slideshow owl-carousel">
-          <div class="strip-1-slide"><img src="images/img_1.jpg" alt="Gallery Image 1"></div>
-          <div class="strip-1-slide"><img src="images/img_2.jpg" alt="Gallery Image 2"></div>
-          <div class="strip-1-slide"><img src="images/img_3.jpg" alt="Gallery Image 3"></div>
-          <div class="strip-1-slide"><img src="images/img_4.jpg" alt="Gallery Image 4"></div>
-          <div class="strip-1-slide"><img src="images/img_5.jpg" alt="Gallery Image 5"></div>
+          <div class="strip-1-slide"><img src="images/demo1.jpg" alt="Gallery Image 1"></div>
+          <div class="strip-1-slide"><img src="images/demo2.jpg" alt="Gallery Image 2"></div>
+          <div class="strip-1-slide"><img src="images/demo1.jpg" alt="Gallery Image 3"></div>
+          <div class="strip-1-slide"><img src="images/demo2.jpg" alt="Gallery Image 4"></div>
+          <div class="strip-1-slide"><img src="images/demo1.jpg" alt="Gallery Image 5"></div>
         </div>
       </div>
     </section>
